# build-your-own-linear-regression

./: README.md  pyproject.toml  requirements.txt
data/processed/: processed_salary_data.csv
notebooks/: 01-initial-exploration.ipynb  02-model-validation.ipynb
src/linear_regression_model/: __init__.py  evaluation.py  model.py  utils.py
