[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linear_regression_model"
version = "0.0.1"
authors = [
  { name="Ashkan Nadafian", email="ashkannadafianmail@gmail.com" },
]
description = "A simple linear regression model built from scratch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/a-nadafian/build-your-own-linear-regression"
"Bug Tracker" = "https://github.com/a-nadafian/build-your-own-linear-regression/issues"
